--- a/claseHerencia/style.css
+++ b/claseHerencia/style.css
@@ -4,5 +4,5 @@ html{
 }
 h1{
     
-    font-size: inherit; /* hereda tamañan de fuente del padre */
+    font-size: inherit; /* hereda tamañano de fuente del padre */
 }
